# docgen

./: .env  Cargo.toml  output.yaml
src/: lib.rs  main.rs
src/call_graph/: gpt_graph_builder.rs  graph.rs  import.rs  manifest.rs  mod.rs
src/cli/: args.rs  mod.rs
src/code/: mod.rs
src/domain/: ir.rs
src/generators/: mod.rs
src/generators/rust_axum/: mod.rs  prompts.rs
src/huggingface/: mod.rs
src/huggingface/task/: code_summarizer.rs  mod.rs  text_generator.rs
src/llm/: llm.rs  mod.rs
src/llm/openai/: deepseek.rs  gpt_3_5.rs  mod.rs  prompt.rs
src/utils/: mod.rs
