[package]
name = "docgen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
cargo_toml = "0.21.0"
clap = { version = "4.5.29", features = ["derive"] }
derive_builder = "0.20.2"
eframe = "0.31.0"
egui_graphs = "0.23.0"
petgraph = "0.7.1"
proc-macro2 = { version = "1.0.93", features = ["span-locations"] }
regex = "1.11.1"
serde = "1.0.217"
serde_json = "1.0.138"
syn = { version = "2.0.98", features = ["full", "visit", "extra-traits"] }
url = { version = "2.5.4", features = ["serde"] }
