[package]
name = "docgen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
cargo_toml = "0.21.0"
clap = { version = "4.5.29", features = ["derive"] }
deepseek_rs = "0.1.4"
derive_builder = "0.20.2"
dotenv = "0.15.0"
eframe = "0.31.0"
egui_graphs = "0.23.0"
indoc = "2.0.6"
oas3 = "0.15.0"
openai = "1.0.0"
openai-rust = "1.5.2"
openapi = "0.1.5"
petgraph = "0.7.1"
proc-macro2 = { version = "1.0.93", features = ["span-locations"] }
regex = "1.11.1"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
syn = { version = "2.0.98", features = ["full", "visit", "extra-traits"] }
tokio = { version = "1.43.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
